# online_transactions

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
scripts/: build.sh
src/backend/: .dockerignore  .gitignore  README.md  backend.dockerfile  celery.flower.dockerfile  celery.worker.dockerfile  pyproject.toml  pytest.ini
src/backend/alembic/: env.py
src/backend/alembic/versions/: bd2f5b6cf562_1_user.py  e41761dd5672_2_wallet.py  fbb20702b424_3_transaction.py
src/backend/app/: gunicorn_conf.py  main.py
src/backend/app/conf/: config.py
src/backend/app/contrib/account/: api.py  models.py  repository.py  schema.py
src/backend/app/contrib/transaction/: __init__.py  api.py  fetch.py  models.py  repository.py  schema.py  tasks.py
src/backend/app/contrib/wallet/: api.py  models.py  repository.py  schema.py
src/backend/app/core/: app.py  celery_app.py  enums.py  exceptions.py  schema.py
src/backend/app/db/: __init__.py  init_db.py  models.py  repository.py  session.py
src/backend/app/locale/: base.pot
src/backend/app/locale/en/LC_MESSAGES/: messages.mo  messages.po
src/backend/app/routers/: api.py  dependency.py  router.py
src/backend/app/tests/: conftest.py
src/backend/app/tests/api/: test_account.py  test_transaction.py  test_wallet.py
src/backend/app/utils/: __init__.py  emails.py  security.py  templating.py
src/backend/app/utils/datetime/: timezone.py
src/backend/app/utils/translation/: middleware.py
src/backend/scripts/: prestart.sh  start-reload.sh  start.sh  tests-start.sh  worker-flower-start.sh  worker-start.sh
(+3 files in other folders)
