[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool]

[tool.poetry]
authors = ["Batyr Jumageldiyew <jumageldiyewb@list.ru>"]
description = ""
name = "backend"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aioredis = "^2.0.1"
alembic = "^1.8.1"
asgi-lifespan = "^2.0.0"
asgiref = "^3.5.2"
asyncpg = "^0.27.0"
Babel = "^2.11.0"
celery = "^5.2.7"
email-validator = "^1.3.0"
emails = "^0.6"
fastapi = "^0.87.0"
gunicorn = "^20.1.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
orjson = "^3.8.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.5"
python = "^3.10"
python-dotenv = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^4.3.4"
requests = "^2.28.1"
sentry-sdk = "^1.11.0"
SQLAlchemy = "^1.4.44"
SQLAlchemy-Utils = "^0.38.3"
tenacity = "^8.1.0"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"
flower = "^1.2.0"

[tool.poetry.group.dev.dependencies]
Faker = "^15.3.2"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-celery = "^0.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
toml-sort = "^0.20.1"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
no_header = true
